# logica_programacao

./: README.md  aula20.py  aula21.py  aula22.py  aula23.py  aula24.py  aula25.py  aula26.py  aula27.py  aula28.py  aula29.py  aula30.py  aula31.py  aula32.py  aula33.py  aula34.py  aula35.py  aula36.py  aula37.py  aula38.py  aula39.py  aula40.py  aula41.py  aula42.py  aula43.py  aula44.py  aula45.py  aula47.py  aula48.py  aula49e50.py  aula51.py  aula52.py  aula53.py  aula54.py  aula55.py  aula56.py  aula57.py  aula58.py  aula59.py  aula60.py  (+3 more)
