[tool.poetry]
name = "logica-programacao"
version = "0.1.0"
description = "Estudo de Lógica de Programação no Python"
authors = ["LucasJFaust <lucasjfm.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
